# IN3110

./: README.md
assignment3/: README.md  pyproject.toml
assignment3/instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/instapy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
assignment3/test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  collect_dates.py  dates.txt  fetch_player_statistics.py  filter_urls.py  output.txt  requesting_urls.py  time_planner.py  urls
